--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "blog.eric231.car-control",
+  "appId": "io.ionic.starter",
   "appName": "car-control",
   "bundledWebRuntime": false,
   "npmClient": "npm",
