--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@types/ws": "^7.2.4",
+    "nipplejs": "^0.8.5",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
+    "ws": "^7.3.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
